docs: add BOILERPLATE_SPEC.md and rewrite README for Phase 8
BOILERPLATE_SPEC.md documents the full architecture baseline — all core
patterns (RLS multi-tenancy, Transactional Outbox, Idempotent Consumer,
CQRS, Saga), every pluggable point (auth, broker, payments, cloud),
database schema, event envelope format, observability stack, CI/CD
pipelines, and a step-by-step adoption guide.

README is rewritten as a quickstart: prerequisites, clone → infra →
build → up → test happy path, Makefile reference, pluggable points
quick-reference, and tech stack table.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>